# toru

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: build.yml
src/: aur.rs  clean.rs  install.rs  lib.rs  main.rs  remove.rs  update.rs
