[package]
name = "toru"
version = "0.2.0"
authors = [ "PryosCode <info@pryoscode.net>" ]
edition = "2018"
description = "Pacman wrapper with AUR support."
readme = "README.md"
homepage = "https://aur.archlinux.org/packages/toru/"
repository = "https://github.com/PryosCode/toru"
license = "Apache-2.0"
keywords = [ "archlinux", "pacman", "aur-helper" ]
publish = false

[dependencies]
clap = "3.0.0-beta.4"
reqwest = { version = "0.11.4", features = [ "blocking" ] }
serde = "1.0.127"
serde_json = "1.0.66"
serde_derive = "1.0.127"
dirs = "3.0.2"