[package]
name = "toru"
version = "0.4.3"
authors = [ "PryosCode <info@pryoscode.net>" ]
edition = "2018"
description = "Pacman wrapper with AUR support."
readme = "README.md"
homepage = "https://aur.archlinux.org/packages/toru/"
repository = "https://github.com/PryosCode/toru"
license = "Apache-2.0"
keywords = ["archlinux", "pacman", "aur-helper"]
publish = false

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
dialoguer = "0.8.0"
dirs = "3.0.2"