[package]
name = "toru"
version = "1.0.0"
authors = ["PryosCode <info@pryoscode.net>"]
edition = "2018"
description = "Pacman wrapper with AUR support."
readme = "README.md"
homepage = "https://aur.archlinux.org/packages/toru/"
repository = "https://github.com/PryosCode/toru"
license = "Apache-2.0"
keywords = ["archlinux", "pacman", "aur-helper"]
publish = false

[dependencies]
clap = "2.33.3"
ureq = "2.1.1"
miniserde = "0.1.15"
nix = "0.22.1"
dirs = "3.0.2"
rm_rf = "0.6.1"
srcinfo = "1.0.0"